--- a/package.json
+++ b/package.json
@@ -30,6 +30,8 @@
     "eslint": "^7.8.1",
     "eslint-loader": "^4.0.0",
     "file-loader": "^6.0.0",
+    "font-awesome": "^4.7.0",
+    "fontawesome": "^5.6.3",
     "html-webpack-plugin": "^4.0.4",
     "mini-css-extract-plugin": "^0.11.1",
     "node-sass": "^4.14.1",
@@ -44,5 +46,6 @@
     "webpack-cli": "^3.3.11",
     "webpack-dev-server": "^3.11.0",
     "webpack-merge": "^5.1.4"
-  }
+  },
+  "dependencies": {}
 }
